@@ -524,6 +524,8 @@ void Face_stats::save_config(Configuration *config)
 void Face_stats::load_config(Configuration *config)
 {
 	int nmode;
+	if (Game::get_game_type() == EXULT_DEVEL_GAME)
+		return;			// FOR NOW, skip if new game.
 	config->value("config/gameplay/facestats",nmode,-1);
 	if(self)
 		RemoveGump();
